--- a/src/app/maps/pages/markers-page/markers-page.component.html
+++ b/src/app/maps/pages/markers-page/markers-page.component.html
@@ -1,1 +1,42 @@
-<p>markers-page works!</p>
+<div id="map" #map></div>
+
+<div class="floating-range p-2">
+    <div class="floating-content">
+        <button (click)="zoomOut" class="btn btn-primary"> - </button>
+
+        <input type="range"
+        class="form-range px-2"
+        min="-2"
+        max="18"
+        [value]="zoom"
+        (input)="zoomChanged( zoomInput.value )"
+        #zoomInput
+        >
+
+        <button (click)="zoomIn" class="btn btn-primary"> + </button>
+
+    </div>
+    
+    <span class="form-label">
+        Zoom: {{ zoom | number: '2.2-2' }}
+        <br>
+        Lng, Lat {{ currentLngLat.lng | number: '1.0-3' }}, {{ currentLngLat.lat | number: '1.0-3' }}
+    </span>
+
+</div>
+
+<ul class="list-group">
+    <li *ngFor="let colorMarker of markers; let i = index" 
+        class="list-group-item"
+        [ngStyle]="{ backgroundColor: colorMarker.color }"
+        (dblclick)="deleteMarker(i)"
+        (click) = "flyTo( colorMarker.marker )"
+        >
+        Marker {{ i + 1 }}
+    </li>
+</ul>
+
+
+<button (click)="createMarker()" class="btn btn-primary">
+    + Agregar marcador
+</button>
