mini maps added

--- a/src/app/maps/pages/properties-page/properties-page.component.html
+++ b/src/app/maps/pages/properties-page/properties-page.component.html
@@ -19,7 +19,7 @@
 
                 <div class="card">
                     <!-- <img src="..." alt="" class="card-img-top"> -->
-                    <maps-mini-map/>
+                    <maps-mini-map [lngLat]="house.lngLat"/>
                     
                     <div class="card-body">
                         <h5 class="card-title">{{ house.title }}</h5>
