--- a/src/app/maps/pages/properties-page/properties-page.component.html
+++ b/src/app/maps/pages/properties-page/properties-page.component.html
@@ -28,7 +28,9 @@
                 </div>
             </div>
 
-
+            <div class="col-4 mb-2">
+                <counter-alone/>
+            </div>
 
 
         </div>
